--- a/app/src/main/res/layout/activity_edit_cat.xml
+++ b/app/src/main/res/layout/activity_edit_cat.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:background="@drawable/backdrop_1"
     tools:context=".feature.MainActivity">
 
@@ -48,6 +48,7 @@
         </androidx.appcompat.widget.Toolbar>
 
 
+
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/mainPhoto"
             android:layout_width="150dp"
@@ -81,12 +82,14 @@
             app:layout_constraintTop_toBottomOf="@+id/add_photo"
             tools:listitem="@layout/item_add_photo_cat" />
 
+
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
+            android:paddingBottom="50dp"
             android:layout_marginEnd="8dp"
             android:background="@drawable/menu_layout"
             app:layout_constraintEnd_toEndOf="parent"
@@ -124,6 +127,7 @@
                 android:id="@+id/btnSolid2"
                 style="@style/MyTextInputLayout"
                 android:layout_width="0dp"
+
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -191,6 +195,15 @@
                 app:layout_constraintTop_toBottomOf="@+id/btnSolid3" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/btn_add"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/add_button"
+            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
+            app:layout_constraintEnd_toEndOf="@+id/recyclerView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
