--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -88,7 +88,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <dita.shafira.mate.component.BtnSolid
-        android:id="@+id/btnSolid6"
+        android:id="@+id/sendMail"
         android:layout_width="0dp"
         android:layout_height="42dp"
         android:layout_marginStart="16dp"
