--- a/app/src/main/res/layout/activity_mating_1.xml
+++ b/app/src/main/res/layout/activity_mating_1.xml
@@ -54,6 +54,18 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:listitem="@layout/item_list_cat" />
 
+    <ImageView
+        android:id="@+id/blank"
+        android:visibility="gone"
+        android:src="@drawable/blank_list"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
     <ProgressBar
         android:id="@+id/progress"
         android:visibility="invisible"
