--- a/app/src/main/res/layout/activity_wish_list.xml
+++ b/app/src/main/res/layout/activity_wish_list.xml
@@ -42,6 +42,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
