--- a/app/src/main/res/layout/item_add_photo_cat.xml
+++ b/app/src/main/res/layout/item_add_photo_cat.xml
@@ -3,12 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
+    android:layout_marginHorizontal="5dp"
     android:layout_height="wrap_content"
     android:background="@color/soft_guava">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/soft_guava"
+        android:background="@color/salem"
+        android:padding="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView2"
             android:layout_width="wrap_content"
@@ -39,16 +42,15 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <ImageView
+                android:id="@+id/delete"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/ic_remove"
+                app:layout_constraintBottom_toBottomOf="@+id/cardView2"
+                app:layout_constraintEnd_toEndOf="@+id/cardView2" />
         </androidx.cardview.widget.CardView>
-        <ImageView
-            android:id="@+id/delete"
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_remove"
-            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
-            app:layout_constraintEnd_toEndOf="@+id/cardView2"
-            app:layout_constraintStart_toEndOf="@+id/cardView2"
-            app:layout_constraintTop_toBottomOf="@+id/cardView2" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
