--- a/app/src/main/res/layout/item_my_pets_2.xml
+++ b/app/src/main/res/layout/item_my_pets_2.xml
@@ -14,13 +14,14 @@
             android:id="@+id/imageView10"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="@color/salem"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
+            android:id="@+id/cat_photo"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="8dp"
