--- a/app/src/main/res/layout/activity_history_mating.xml
+++ b/app/src/main/res/layout/activity_history_mating.xml
@@ -54,5 +54,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:listitem="@layout/item_history_mating" />
+    <ImageView
+        android:id="@+id/blank"
+        android:visibility="gone"
+        android:src="@drawable/riwayat_mating_not_found"
+        android:layout_width="0dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
