--- a/app/src/main/res/layout/activity_list_cat.xml
+++ b/app/src/main/res/layout/activity_list_cat.xml
@@ -60,6 +60,7 @@
         android:layout_height="55dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
+        android:layout_marginBottom="20dp"
         android:text="Tambah Kucing"
         android:fontFamily="@font/mmedium"
         android:textStyle="bold"
@@ -68,6 +69,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
         tools:ignore="MissingClass,MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/blank"
+        android:visibility="gone"
+        android:src="@drawable/my_cat_not_found"
+        android:layout_width="0dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
