--- a/app/src/main/res/layout/activity_mating_3.xml
+++ b/app/src/main/res/layout/activity_mating_3.xml
@@ -67,8 +67,9 @@
     <ImageView
         android:id="@+id/blank"
         android:visibility="gone"
-        android:src="@drawable/blank_list"
+        android:src="@drawable/not_found"
         android:layout_width="0dp"
+        android:layout_marginHorizontal="30dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
