--- a/app/src/main/res/layout/activity_wish_list.xml
+++ b/app/src/main/res/layout/activity_wish_list.xml
@@ -55,4 +55,17 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         tools:listitem="@layout/item_list_cat_2" />
 
+    <ImageView
+        android:id="@+id/blank"
+        android:visibility="gone"
+        android:src="@drawable/kucingdisukai"
+        android:layout_width="0dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
